challenge/week05/day32/yaml/middleware-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: middleware
  labels:
    tier: middleware
