challenge/week05/day32/yaml/middleware-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: middlware-network-policy
  namespace: middleware
spec:
  podSelector: {} # All pods in the namespace
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: web
    ports:
    - protocol: TCP
      port: 80
  - from:
    - namespaceSelector:
        matchLabels:
          tier: middleware
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          tier: database
    ports:
    - protocol: TCP
      port: 80
  - to:
    - namespaceSelector:
        matchLabels:
          tier: middleware
    ports:
    - protocol: TCP
      port: 80
  - to:
    ports:
    - protocol: UDP
      port: 53 # DNS resolution
